# tca8418-rs

./: Cargo.toml  README.md
examples/embassy-i2c-bus/: Cargo.toml  README.md  memory.x
examples/embassy-i2c-bus/src/: main.rs
src/: lib.rs  register.rs
