[package]
name = "embassy-i2c-bus"
version = "0.1.0"
edition = "2024"

[dependencies]

# Debug logging from the firmware by defmt via an RTT channel.
defmt = "1.0.1"
defmt-rtt = "1.0.0"

# Provides a panic handler for `probe-run`.
#
# The `print-defmt` feature prints panic messages via defmt.
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# ARM Cortex support.
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"

# Embassy HAL
embassy-stm32 = { version = "0.4.0", features = [
    "defmt",
    "stm32h743zi",
    "time-driver-tim2",
    "exti",
    "memory-x",
    "chrono",
] }
embassy-embedded-hal = { version = "0.5.0" }
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-futures = { version = "0.1.2" }
embassy-usb = { version = "0.5.1", features = ["defmt"] }

assign-resources = "0.5.0"

critical-section = "1.2.0"

tca8418-rs = { path = "../../" }
static_cell = "2.1.1"
embassy-sync = "0.7.2"
grounded = "0.2.0"
